Fixed spacing issue in thread reply.

--- a/src/sass/messaging/partials/_messaging-thread.scss
+++ b/src/sass/messaging/partials/_messaging-thread.scss
@@ -178,8 +178,12 @@
   font-size: 1.8rem;
   padding: 3rem 2rem;
 
-  .messaging-write label {
-    display: none;
+  .messaging-write {
+    padding-top: 0;
+
+    label {
+      display: none;
+    }
   }
 
   &-recipient {
